--- a/lang/es.json
+++ b/lang/es.json
@@ -50,7 +50,9 @@
     "Are You Sure?": "Estas seguro",
     "Cancel": "Cancelar",
     "You want to logout!": "¡Quieres cerrar sesión!",
+    "You want to delete this course!": "¡Quieres eliminar este curso!",
     "Yes! Logout": "¡Sí! Cerrar sesión",
+    "Yes! Delete": "¡Sí! Borrar",
     "Profile": "Perfil",
     "Logout": "Cerrar sesión",
 
