--- a/lang/es.json
+++ b/lang/es.json
@@ -90,5 +90,6 @@
     "Upload Course Image": "Cargar imagen del curso",
     "Prerequisite": "Requisito previo",
     "Disclaimers & Introduction": "Descargos de responsabilidad e introducción",
-    "Course Title": "Título del curso"
+    "Course Title": "Título del curso",
+    "Category": "Categoría"
 }
